# Rote_cmake

./: terminal.txt
hello_cmake/: CMakeLists.txt  main.cpp
hello_headers/: CMakeLists.txt
hello_headers/include/: hello_headers.hpp
hello_headers/src/: hello_headers.cpp  main.cpp
hello_shared_library/: CMakeLists.txt
hello_shared_library/src/: hello_library.cpp  main.cpp
hello_static_library/: CMakeLists.txt
hello_static_library/include/static/: hello_library.hpp
hello_static_library/src/: hello_library.cpp  main.cpp
